<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="home_button_add_task" type="id" />
    <item name="home_button_settings" type="id" />
    <item name="home_button_previous_day" type="id" />
    <item name="home_button_next_day" type="id" />
    <item name="home_button_back_today" type="id" />
    <item name="home_button_pick_date" type="id" />
    <item name="home_button_stats" type="id" />
    <item name="nav_noise" type="id" />
    <item name="nav_stats" type="id" />
    <item name="nav_profile" type="id" />
    <item name="settings_container" type="id" />
    <item name="settings_button_back" type="id" />
    <item name="tasks_button_add_task" type="id" />
    <item name="task_input_title" type="id" />
    <item name="task_input_subject" type="id" />
    <item name="task_input_target" type="id" />
    <item name="task_input_description" type="id" />
    <item name="task_input_estimated" type="id" />
    <item name="task_input_planned_date" type="id" />
    <item name="task_input_deadline" type="id" />
    <item name="task_input_reminder" type="id" />
    <item name="task_button_alarm_settings" type="id" />
    <item name="task_spinner_difficulty" type="id" />
    <item name="task_spinner_priority" type="id" />
    <item name="task_spinner_color" type="id" />
    <item name="task_switch_auto_split" type="id" />
    <item name="task_button_advanced_toggle" type="id" />
    <item name="task_button_save" type="id" />
    <item name="task_button_save_start" type="id" />
    <item name="task_button_complete" type="id" />
    <item name="task_rewrite_container" type="id" />
    <item name="task_rewrite_suggestion_1" type="id" />
    <item name="task_rewrite_suggestion_2" type="id" />
    <item name="task_rewrite_suggestion_3" type="id" />
    <item name="focus_button_pause_resume" type="id" />
    <item name="focus_button_finish_early" type="id" />
    <item name="focus_button_continue_next" type="id" />
    <item name="focus_button_back_home" type="id" />
    <item name="focus_button_go_tasks" type="id" />
    <item name="focus_button_noise_console" type="id" />
    <item name="focus_rating_1" type="id" />
    <item name="focus_rating_2" type="id" />
    <item name="focus_rating_3" type="id" />
    <item name="focus_rating_4" type="id" />
    <item name="focus_rating_5" type="id" />
    <item name="focus_distraction_spinner" type="id" />
    <item name="focus_reflection_input" type="id" />
    <item name="focus_button_save_rating" type="id" />
    <item name="noise_button_back_home" type="id" />
    <item name="noise_button_play_current" type="id" />
    <item name="noise_button_stop" type="id" />
    <item name="noise_button_save_custom" type="id" />
    <item name="noise_master_volume" type="id" />
    <item name="noise_smart_suggestions" type="id" />
    <item name="noise_smart_apply_1" type="id" />
    <item name="settings_theme_spinner" type="id" />
    <item name="settings_notification_switch" type="id" />
    <item name="settings_auto_stop_switch" type="id" />
    <item name="settings_master_volume" type="id" />
    <item name="settings_clear_data_button" type="id" />
    <item name="settings_forest_tab_switch" type="id" />
    <item name="settings_cloud_url" type="id" />
    <item name="settings_cloud_username" type="id" />
    <item name="settings_cloud_password" type="id" />
    <item name="settings_cloud_auto_sync" type="id" />
    <item name="settings_cloud_save" type="id" />
    <item name="settings_cloud_sync" type="id" />
    <item name="settings_cloud_backup" type="id" />
    <item name="settings_cloud_restore" type="id" />
    <item name="stats_filter_today" type="id" />
    <item name="stats_filter_week" type="id" />
    <item name="stats_filter_month" type="id" />
    <item name="stats_trend_chart" type="id" />
    <item name="stats_subject_chart" type="id" />
    <item name="stats_ai_analysis_card" type="id" />
    <item name="stats_button_back_home" type="id" />
    <item name="forest_evolution_level" type="id" />
    <item name="profile_button_back_home" type="id" />
    <item name="profile_input_name" type="id" />
    <item name="profile_input_email" type="id" />
    <item name="profile_input_password" type="id" />
    <item name="profile_button_login" type="id" />
    <item name="profile_button_logout" type="id" />
    <item name="profile_calendar" type="id" />
    <item name="profile_contribution_heatmap" type="id" />
    <item name="profile_selected_day_tasks" type="id" />
    <item name="profile_card_identity" type="id" />
    <item name="profile_button_edit" type="id" />
    <item name="profile_edit_name" type="id" />
    <item name="profile_edit_email" type="id" />
    <item name="profile_button_change_avatar" type="id" />
    <item name="profile_button_app_icon" type="id" />
    <item name="alarm_button_start" type="id" />
    <item name="alarm_button_snooze" type="id" />
    <item name="alarm_button_close" type="id" />
</resources>
